Fix overflow and enable preloader in mobile

--- a/pages/about.css
+++ b/pages/about.css
@@ -51,10 +51,9 @@ nav {
   position: sticky;
   top: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 100px;
-  padding: 0 100px;
   background-color: var(--brown);
 }
 
@@ -113,7 +112,7 @@ a {
   font-size: clamp(5rem, 7vw, 8rem);
   margin-top: 200px;
   align-self: flex-start;
-  padding-left: 100px;
+  padding-left: 13%;
 }
 
 .about-section {
@@ -299,22 +298,15 @@ a {
   body {
     overflow-x: hidden;
   }
-  .landing-page {
-    margin: 0 -100px;
-  }
   .loading .line-box {
     width: 60%;
   }
-  .brand-name {
-    margin-left: 50px;
-  }
   .landing-page-content {
-    margin-top: 20%;
-    padding: 0 10%;
+    width: 100vw;
+    padding-top: 30%;
   }
   .about-section {
-    margin: 0 -100px;
-    padding: 0 35%;
+    padding: 5%;
   }
   nav {
     display: flex;
@@ -333,6 +325,7 @@ a {
     width: 100%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    display: none;
   }
   .nav-links li {
     opacity: 0;
@@ -346,8 +339,9 @@ a {
     cursor: pointer;
     z-index: 6;
   }
-  #preloader {
-    display: none;
+  .image img,
+  .values-image img {
+    width: 90vw;
   }
 }
 
