--- a/pages/contact.css
+++ b/pages/contact.css
@@ -42,18 +42,15 @@ body {
   background-position: center;
   min-height: 100dvh;
   color: var(--text-heading);
-  display: flex;
-  flex-direction: column;
 }
 
 nav {
   position: sticky;
   top: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 100px;
-  padding: 0 100px;
   background-color: var(--brown);
 }
 
@@ -110,9 +107,8 @@ a {
 .brand-name {
   font-family: "Clicker Script", serif;
   font-size: clamp(5rem, 7vw, 8rem);
-  margin-top: 200px;
-  align-self: flex-start;
-  padding-left: 100px;
+  margin: 10% 13% 13% 13%;
+  padding-top: 100px;
 }
 
 .contact-section {
@@ -121,6 +117,9 @@ a {
   display: flex;
   flex-direction: column;
   background-color: var(--brown);
+  justify-content: center;
+  align-items: center;
+  padding: 0 10% 10%;
 }
 
 .contact-section > h2 {
@@ -172,6 +171,7 @@ a {
   justify-content: center;
   gap: 50px;
   flex-wrap: wrap;
+  margin-top: 100px;
 }
 
 .form > h3 {
@@ -185,7 +185,8 @@ form {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 50dvh;
+  max-width: 50vw;
+  width: 500px;
 }
 
 label {
@@ -214,12 +215,12 @@ iframe {
   border: none;
 }
 
-footer {
+/* footer {
   min-height: 50dvh;
   background-color: #160b00;
-}
+} */
 
-.footer {
+/* .footer {
   background-image: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0.5) 56%,
@@ -230,7 +231,7 @@ footer {
   background-position: center;
   background-size: cover;
   background-color: var(--brown);
-}
+} */
 
 /* PRELOADER */
 
@@ -291,22 +292,15 @@ footer {
   body {
     overflow-x: hidden;
   }
-  .landing-page {
-    margin: 0 -100px;
-  }
   .loading .line-box {
     width: 60%;
   }
   .landing-page-content {
-    margin-top: 20%;
-    padding: 0 10%;
+    width: 100vw;
+    padding-top: 30%;
   }
   .brand-name {
     margin-left: 50px;
-  }
-  .about-section {
-    margin: 0 -100px;
-    padding: 0 35%;
   }
   nav {
     display: flex;
@@ -325,6 +319,7 @@ footer {
     width: 100%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    display: none;
   }
   .nav-links li {
     opacity: 0;
@@ -332,14 +327,21 @@ footer {
   .products-gallery {
     text-align: center;
   }
-  #preloader {
-    display: none;
-  }
   .burger,
   .logo {
     display: block;
     cursor: pointer;
     z-index: 6;
+  }
+  iframe {
+    min-width: 90vw;
+    min-height: 45vh;
+    border: none;
+  }
+  input,
+  a.btn {
+    max-width: 90vw;
+    min-width: 60vw;
   }
 }
 
