--- a/pages/menu.css
+++ b/pages/menu.css
@@ -272,8 +272,6 @@ body {
   background-position: center;
   min-height: 100dvh;
   color: var(--text-heading);
-  display: flex;
-  flex-direction: column;
 }
 
 .side-nav > nav {
@@ -292,10 +290,9 @@ body {
   position: sticky;
   top: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 100px;
-  padding: 0 100px;
   background-color: var(--brown);
 }
 
@@ -352,9 +349,8 @@ a {
 .brand-name {
   font-family: "Clicker Script", serif;
   font-size: clamp(5rem, 7vw, 8rem);
-  margin-top: 200px;
-  align-self: flex-start;
-  padding-left: 100px;
+  margin: 10% 13% 13% 13%;
+  padding-top: 100px;
 }
 
 .menu-section {
@@ -531,8 +527,8 @@ span.link-bold {
   body {
     overflow-x: hidden;
   }
-  .landing-page {
-    margin: 0 -100px;
+  .brand-name {
+    margin-top: 30%;
   }
   .landing-page > nav {
     justify-content: space-around;
@@ -540,27 +536,16 @@ span.link-bold {
   .loading .line-box {
     width: 60%;
   }
-  .brand-name {
-    margin-left: 50px;
-  }
   .side-nav {
     display: none;
   }
   .wrapper {
     text-align: center;
   }
-  .landing-page-content {
-    margin-top: 20%;
-    padding: 0 10%;
-  }
   .coffee-container {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .about-section {
-    margin: 0 -100px;
-    padding: 0 35%;
   }
   nav {
     display: flex;
@@ -579,6 +564,7 @@ span.link-bold {
     width: 100%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    display: none;
   }
   .nav-links li {
     opacity: 0;
@@ -591,9 +577,6 @@ span.link-bold {
     display: block;
     cursor: pointer;
     z-index: 6;
-  }
-  #preloader {
-    display: none;
   }
 }
 
