--- a/styles.css
+++ b/styles.css
@@ -48,16 +48,15 @@ nav {
   position: sticky;
   top: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 100px;
-  padding: 0 100px;
   background-color: var(--brown);
 }
 
 .nav-links {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: 40%;
 }
 
@@ -108,9 +107,9 @@ a {
 .landing-page-content {
   display: flex;
   flex-direction: column;
-  margin: 180px 100px 0;
   row-gap: 10px;
   color: var(--text-heading);
+  padding: 10% 13% 13% 13%;
 }
 
 .brand-name {
@@ -214,7 +213,7 @@ span.block {
     url(images/coffee-bg.png) no-repeat right 0 center / cover var(--brown);
   box-shadow: inset 0 -412px 500px -270px #160b00;
   gap: 20px;
-  padding: 100px;
+  padding: 10%;
 }
 
 .about-section h2 {
@@ -347,19 +346,15 @@ span.block {
   body {
     overflow-x: hidden;
   }
-  .landing-page {
-    margin: 0 -100px;
-  }
   .loading .line-box {
     width: 60%;
   }
   .landing-page-content {
-    margin-top: 20%;
-    padding: 0 10%;
+    width: 100vw;
+    padding-top: 30%;
   }
   .about-section {
-    margin: 0 -100px;
-    padding: 0 35%;
+    width: 100vw;
     padding-top: 100px;
   }
   nav {
@@ -379,6 +374,7 @@ span.block {
     width: 100%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    display: none;
   }
   .nav-links li {
     opacity: 0;
@@ -392,9 +388,6 @@ span.block {
     display: block;
     cursor: pointer;
     z-index: 6;
-  }
-  #preloader {
-    display: none;
   }
 }
 
